Mon Sep 14 11:28:26 1998  Adam Fedor  <fedor@ultra.doc.com>

	* ld_lib_path.sh: Add quotes around *_LIBRARY_PATH (patch from
	doko@cs.tu-berlin.de (Matthias Klose)).

Thu Sep  3 15:19:57 1998  Adam Fedor  <fedor@ultra.doc.com>

	* configure.in: Check for DPS.
	* config.make.in: Add DPS_DEFINE.

Tue Aug 25 10:02:03 1998  Adam Fedor  <fedor@doc.com>

	* openapp.in, debugapp.in: Fix typo. (patch from
	doko@cs.tu-berlin.de (Matthias Klose)).
	* GNUstep.csh.in: Add GNUSTEP_BUILD_ROOT for building GNUstep.
	* GNUstep.sh.in: Likewise.

	* config_threaded.m: New config check.
	* configure.in: Use it.
	* config.make.in (objc_threaded): New variable.
	* target.make: Specify thread library and other flags based on 
	objc_threaded.

Thu Aug 20 11:41:48 1998  Adam Fedor  <fedor@doc.com>

	* openapp.in, debugapp.in: Set LIBRARY_COMBO only if not set.
	* brain.make: Likewise for library_combo.
	* GNUstep.csh.in: Add braces around some variables (Changes from
	Christopher Seawood <cls@seawood.org>).
	* ld_lib_path.sh,ld_lib_path.csh: Check if variables set before
	changing. 
	* whichlib.c: Fixup dirent includes.
	
Wed Aug 12 15:25:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* openapp.in: export LIBRARY_COMBO.

Tue Aug  4 16:43:55 1998  Adam Fedor  <fedor@doc.com>

	* application.make: Correct resource installation when
	RESOURCE_FILES not defined.
	* bunlde.make: Likewise.

Tue Aug  4 12:50:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* brain.make: use -ldps even with xraw library.

Tues Aug 4 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* test-application.make set $(TEST_APP_NAME) to be a double colon target. 

Sat Jul 31 21:20:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	*common.make: Modified to set LDFLAGS to use '-pg' when compiling
	with 'profile=yes' and LD == CC

Fri Jul 31 15:08:25 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	*brain.make: Fixed to use the command-line specification of