@@ -30,7 +30,7 @@ setenv LIBRARY_COMBO @ac_cv_library_combo@
 setenv GNUSTEP_LOCAL_ROOT @prefix@/Local
 setenv GNUSTEP_USER_ROOT ~/GNUstep
 
-if ( "${GNUSTEP_BUILD_ROOT}" == "" ) then
+if ( ! ${?GNUSTEP_BUILD_ROOT} ) then
       set GNUSTEP_MAKEFILES=${GNUSTEP_SYSTEM_ROOT}/Makefiles
 else
       set GNUSTEP_MAKEFILES=${GNUSTEP_BUILD_ROOT}/Makefiles
@@ -39,34 +39,34 @@ endif
 #
 # Determine the host information
 #
-setenv GNUSTEP_HOST `$$(GNUSTEP_SYSTEM_ROOT}/Makefiles/config.guess`
-setenv GNUSTEP_HOST_CPU `$$(GNUSTEP_SYSTEM_ROOT}/Makefiles/cpu.sh $GNUSTEP_HOST`
-setenv GNUSTEP_HOST_VENDOR `$(GNUSTEP_SYSTEM_ROOT}/Makefiles/vendor.sh $GNUSTEP_HOST`
-setenv GNUSTEP_HOST_OS `$(GNUSTEP_SYSTEM_ROOT}/Makefiles/os.sh $GNUSTEP_HOST`
+setenv GNUSTEP_HOST `${GNUSTEP_SYSTEM_ROOT}/Makefiles/config.guess`
+setenv GNUSTEP_HOST_CPU `${GNUSTEP_SYSTEM_ROOT}/Makefiles/cpu.sh $GNUSTEP_HOST`
+setenv GNUSTEP_HOST_VENDOR `${GNUSTEP_SYSTEM_ROOT}/Makefiles/vendor.sh $GNUSTEP_HOST`
+setenv GNUSTEP_HOST_OS `${GNUSTEP_SYSTEM_ROOT}/Makefiles/os.sh $GNUSTEP_HOST`
 
 # Clean the host
-setenv GNUSTEP_HOST_CPU `$(GNUSTEP_SYSTEM_ROOT}/Makefiles/clean_cpu.sh $GNUSTEP_HOST_CPU`
-setenv GNUSTEP_HOST_VENDOR `$(GNUSTEP_SYSTEM_ROOT}/Makefiles/clean_vendor.sh $GNUSTEP_HOST_VENDOR`
-setenv GNUSTEP_HOST_OS `$(GNUSTEP_SYSTEM_ROOT}/Makefiles/clean_os.sh $GNUSTEP_HOST_OS`
+setenv GNUSTEP_HOST_CPU `${GNUSTEP_SYSTEM_ROOT}/Makefiles/clean_cpu.sh $GNUSTEP_HOST_CPU`
+setenv GNUSTEP_HOST_VENDOR `${GNUSTEP_SYSTEM_ROOT}/Makefiles/clean_vendor.sh $GNUSTEP_HOST_VENDOR`
+setenv GNUSTEP_HOST_OS `${GNUSTEP_SYSTEM_ROOT}/Makefiles/clean_os.sh $GNUSTEP_HOST_OS`
 
 #
 # the rest of this file is only executed, if the core already is installed.
 #
 
-if ( "${GNUSTEP_BUILD_ROOT}" == "" ) then
+if ( ! ${?GNUSTEP_BUILD_ROOT} ) then
 
 #
 # Add the GNUstep tools directories to the path
 #
-setenv PATH $(GNUSTEP_SYSTEM_ROOT}/Tools:$PATH
-setenv PATH $(GNUSTEP_SYSTEM_ROOT}/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/${LIBRARY_COMBO}:$PATH
-setenv PATH $(GNUSTEP_SYSTEM_ROOT}/Tools/$GNUSTEP_HOST_CPU/${GNUSTEP_HOST_OS}:$PATH
+setenv PATH ${GNUSTEP_SYSTEM_ROOT}/Tools:$PATH
+setenv PATH ${GNUSTEP_SYSTEM_ROOT}/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/${LIBRARY_COMBO}:$PATH
+setenv PATH ${GNUSTEP_SYSTEM_ROOT}/Tools/$GNUSTEP_HOST_CPU/${GNUSTEP_HOST_OS}:$PATH
 setenv PATH $GNUSTEP_LOCAL_ROOT/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/${LIBRARY_COMBO}:$PATH
 setenv PATH $GNUSTEP_LOCAL_ROOT/Tools/$GNUSTEP_HOST_CPU/${GNUSTEP_HOST_OS}:$PATH
 setenv PATH $GNUSTEP_USER_ROOT/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/${LIBRARY_COMBO}:$PATH
 setenv PATH $GNUSTEP_USER_ROOT/Tools/$GNUSTEP_HOST_CPU/${GNUSTEP_HOST_OS}:$PATH
 
-source $(GNUSTEP_SYSTEM_ROOT}/Makefiles/ld_lib_path.csh
+source ${GNUSTEP_SYSTEM_ROOT}/Makefiles/ld_lib_path.csh
 
 #
 # Perform any user initialization
